{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 389,
  "lineage": "e93274e2-e9d1-1cb8-08ae-e79ad625cb2d",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_monitoring_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "30000-32767"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-09-29T09:06:05.030-07:00",
            "deny": [],
            "description": "Allow public LB health checks and client traffic to monitoring LoadBalancers",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/streetcoder-rrakoton/global/firewalls/allow-monitoring-lb",
            "log_config": [],
            "name": "allow-monitoring-lb",
            "network": "https://www.googleapis.com/compute/v1/projects/streetcoder-rrakoton/global/networks/vpc-main",
            "params": [],
            "priority": 1000,
            "project": "streetcoder-rrakoton",
            "self_link": "https://www.googleapis.com/compute/v1/projects/streetcoder-rrakoton/global/firewalls/allow-monitoring-lb",
            "source_ranges": [
              "0.0.0.0/0",
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_monitoring_negs",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3000",
                  "9090"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-09-29T09:06:05.673-07:00",
            "deny": [],
            "description": "Allow Google LB health checks to reach monitoring NEGs (Grafana 3000, Prometheus 9090)",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/streetcoder-rrakoton/global/firewalls/allow-monitoring-negs",
            "log_config": [],
            "name": "allow-monitoring-negs",
            "network": "https://www.googleapis.com/compute/v1/projects/streetcoder-rrakoton/global/networks/vpc-main",
            "params": [],
            "priority": 1001,
            "project": "streetcoder-rrakoton",
            "self_link": "https://www.googleapis.com/compute/v1/projects/streetcoder-rrakoton/global/firewalls/allow-monitoring-negs",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "api_gateway_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.117.168.99",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-09-29T09:06:05.042-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/streetcoder-rrakoton/global/addresses/api-gateway-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "api-gateway-ip",
            "prefix_length": 0,
            "project": "streetcoder-rrakoton",
            "self_link": "https://www.googleapis.com/compute/v1/projects/streetcoder-rrakoton/global/addresses/api-gateway-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_service_range",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "10.99.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-09-29T09:06:05.450-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/streetcoder-rrakoton/global/addresses/google-managed-services-vpc-main",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "google-managed-services-vpc-main",
            "network": "https://www.googleapis.com/compute/v1/projects/streetcoder-rrakoton/global/networks/vpc-main",
            "prefix_length": 16,
            "project": "streetcoder-rrakoton",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/streetcoder-rrakoton/global/addresses/google-managed-services-vpc-main",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/streetcoder-rrakoton/global/networks/vpc-main",
            "mtu": 0,
            "name": "vpc-main",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "8449951229949136739",
            "numeric_id": "8449951229949136739",
            "project": "streetcoder-rrakoton",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/streetcoder-rrakoton/global/networks/vpc-main"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-09-29T09:06:05.084-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/streetcoder-rrakoton/regions/europe-west9/routers/nat-router",
            "name": "nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/streetcoder-rrakoton/global/networks/vpc-main",
            "project": "streetcoder-rrakoton",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/streetcoder-rrakoton/regions/europe-west9/routers/nat-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "streetcoder-rrakoton/europe-west9/nat-router/nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "streetcoder-rrakoton",
            "region": "europe-west9",
            "router": "nat-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "gke-subnet",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "type": "PUBLIC",
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_router.router",
            "google_compute_subnetwork.gke",
            "google_project_service.services"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "gke",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-09-29T09:06:05.341-07:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/streetcoder-rrakoton/regions/europe-west9/subnetworks/gke-subnet",
            "ip_cidr_range": "10.10.0.0/20",
            "name": "gke-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/streetcoder-rrakoton/global/networks/vpc-main",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "streetcoder-rrakoton",
            "purpose": "PRIVATE",
            "region": "europe-west9",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.20.0.0/16",
                "range_name": "pods"
              },
              {
                "ip_cidr_range": "10.30.0.0/20",
                "range_name": "services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/streetcoder-rrakoton/regions/europe-west9/subnetworks/gke-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 7759434846551085186
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}